<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity8">

    <TextView
        android:id="@+id/textView36"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@color/transparentB"
        android:text="@string/main_act_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/books">

            <TextView
                android:id="@+id/textView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview13_textview0"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/transparentB"
                android:text="@string/cardview13_textview1"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:typeface="serif" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview16_textview0"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView47"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview16_textview1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview16_textview2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview16_textview3"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview16_textview4"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview16_textview5"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview16_textview6"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>