<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7">

    <TextView
        android:id="@+id/textView28"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@color/transparentB"
        android:text="@string/main_act_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/books">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview8_textview0"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/transparentB"
                android:text="@string/cardview8_textview1"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:typeface="serif" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:background="@color/transparentB"
                android:text="@string/cardview15_textview0"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:background="@color/transparentB"
                android:text="@string/cardview15_textview1"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview15_textview2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview15_textview3"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview15_textview4"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview15_textview5"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview15_textview6"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:typeface="sans" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>