<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">






<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFC3B"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_act_title"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:background="@color/transparentB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="275dp"
        android:layout_gravity="center"
        android:onClick="openNewsLink"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/newscamera">

            <TextView
                android:id="@+id/info_text0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/transparentB"
                android:text="@string/cardview0_textview0"
                android:textColor="@color/white"
                android:textSize="40dp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/info_text01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:background="@color/transparentB"
                android:text="@string/cardview0_textview1"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:typeface="sans" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="0dp"
        android:layout_height="275dp"
        android:layout_marginTop="24dp"
        android:onClick="startNextAct"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:layout_constraintVertical_bias="0.04000002">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/stop_sign">

            <TextView
                android:id="@+id/info_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/cardview1_textview0"
                android:textColor="@color/white"
                android:textSize="40dp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/info_text11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:background="@color/transparentB"
                android:text="@string/cardview1_textview1"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:typeface="sans" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="0dp"
        android:layout_height="275dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:onClick="openDonationLink"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view1">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/thumbs">

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentB"
                android:text="@string/donate1"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/transparentB"
                android:text="@string/donate2"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic"
                android:typeface="sans" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>